# VERI-RAG

./: .gitignore  README.md  VERI_RAG_IDEA_REVIEW.md
veri-rag/: .env.example  README.md  pyproject.toml  requirements.txt
veri-rag/configs/: experiments.yaml  hpc_template.yaml  models.yaml  mvp.yaml  paper_claude.yaml  paper_openai.yaml  poisonedrag.yaml
veri-rag/data/attacked_corpus/: adaptive_chunks.jsonl  blocker_chunks.jsonl  poisoning_chunks.jsonl  prompt_injection_chunks.jsonl  secret_leakage_chunks.jsonl  topic_flip_chunks.jsonl
veri-rag/data/benchmarks/poisonedrag/: attacks_nq.jsonl  manifest.json  queries.jsonl
veri-rag/data/synthetic_enterprise/: manifest.json
veri-rag/data/synthetic_enterprise/clean_corpus/: benefits.txt  data_retention.txt  deployment_tools.txt  password_policy.txt  product_x_reviews.txt  refund_policy.txt  support_contact.txt  vacation_policy.txt
veri-rag/data/synthetic_enterprise/queries/: enterprise_qa.jsonl
veri-rag/hpc/: merge_results.py  slurm_array_experiment.sh
veri-rag/outputs/certificates/: q001.json  q002.json  q003.json  q004.json  q005.json  q006.json  q007.json  q008.json
veri-rag/outputs/experiment_results/: results.csv  results.jsonl
veri-rag/outputs/hpc_runs/paper_demo/: final_report.md  merged_results.csv
veri-rag/outputs/paper_claude/reports/: report.md
veri-rag/outputs/paper_claude/results/: results.csv  results.jsonl
veri-rag/outputs/paper_openai/reports/: report.md
veri-rag/outputs/paper_openai/results/: results.csv  results.jsonl
veri-rag/outputs/poisonedrag/reports/: report.md
veri-rag/outputs/provenance_graphs/: q001.graphml  q001.json  q002.graphml  q002.json  q003.graphml  q003.json  q004.graphml  q004.json  q005.graphml  q005.json  q006.graphml  q006.json  q007.graphml  q007.json  q008.graphml  q008.json
veri-rag/outputs/reports/: report.md
veri-rag/scripts/: hpc_setup.sh  run_experiment.slurm  run_paper_pipeline.sh  veri-rag.sh
veri-rag/src/veri_rag/: __init__.py  cli.py  pipeline.py
veri-rag/tests/: conftest.py  test_attacks.py  test_certificate.py  test_chunker.py  test_experiment_runner.py  test_influence.py  test_llm_health.py  test_poisonedrag.py  test_repair.py  test_riaa.py  test_risk_scorer.py  test_smoothing.py
(+83 files in other folders)
